--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test-watch": "nodemon --exec 'npm test'"
   },
   "engines": {
-    "node": "14.x"
+    "node": "14"
   },
   "author": "Fuad Hasan",
   "license": "ISC",
