--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Fuad Hasan",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "express": "^4.14.0",
     "moment": "^2.29.1",
     "socket.io": "^4.4.1",
