--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "ejs": "^3.1.6",
     "express": "^4.14.0",
     "moment": "^2.29.1",
     "socket.io": "^4.4.1",
