--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "compression": "^1.7.4",
     "ejs": "^3.1.6",
     "express": "^4.14.0",
     "moment": "^2.29.2",
