--- a/package.json
+++ b/package.json
@@ -15,15 +15,20 @@
   "author": "Fuad Hasan",
   "license": "ISC",
   "dependencies": {
+    "@types/mustache": "^4.1.2",
+    "@types/socket.io-client": "^3.0.0",
     "body-parser": "^1.19.2",
     "compression": "^1.7.4",
     "ejs": "^3.1.6",
     "express": "^4.14.0",
     "moment": "^2.29.2",
     "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
+    "@types/socket.io": "^3.0.2",
     "expect": "^27.5.1",
     "mocha": "^9.2.1",
     "nodemon": "^2.0.15"
