--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.14.0",
     "moment": "^2.29.2",
