--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chatmate",
-  "version": "5.1.8",
-  "description": "",
+  "version": "5.2.0",
+  "description": "Temporary chatting application",
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
@@ -15,10 +15,9 @@
   "author": "Fuad Hasan",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "ejs": "^3.1.6",
+    "ejs": "^3.0.2",
     "express": "^4.14.0",
     "moment": "^2.29.2",
     "socket.io": "^4.4.1",
