--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chatmate",
-  "version": "5.2.0",
+  "version": "5.2.1",
   "description": "Temporary chatting application",
   "main": "index.js",
   "scripts": {
@@ -17,8 +17,9 @@
   "dependencies": {
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "ejs": "^3.1.6",
-    "express": "^4.14.0",
+    "ejs": "^3.0.2",
+    "express": "^4.17.3",
+    "express-rate-limit": "^6.3.0",
     "moment": "^2.29.2",
     "socket.io": "^4.4.1",
     "uuid": "^8.3.2"
