--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chatmate",
   "version": "5.3.0",
-  "description": "Temporary chatting application",
+  "description": "Temporary messaging application",
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
