--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.3",
     "express-rate-limit": "^6.3.0",
     "moment": "^2.29.2",
+    "mongodb": "^4.5.0",
     "socket.io": "^4.4.1",
     "uuid": "^8.3.2"
   },
