--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,13 @@
 node_modules
-.vscode
-
-login.css
-login.css.map
-login.scss
-main.css
-main.css.map
-main.scss
-
-login.js
-create.js
-main.js
-notify.js
-
-jquery-3.1.0.min.js
-fontawesome.js
-moment.js
-mustache.js
-
-bundle.js.LICENSE.txt
+public/js/dist/bundle.js.LICENSE.txt
+public/css/login.css
+public/css/login.css.map
+public/css/login.scss
+public/css/main.css
+public/css/main.css.map
+public/css/main.scss
+public/js/libs/fontawesome.js
+public/js/libs/jquery-3.1.0.min.js
+public/js/libs/moment.js
+public/js/src/main.js
+public/js/src/notify.js
