--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
-public/js/dist/bundle.js.LICENSE.txt
-public/css/login.css
-public/css/login.css.map
-public/css/login.scss
-public/css/main.css
-public/css/main.css.map
-public/css/main.scss
-public/js/libs/fontawesome.js
-public/js/libs/jquery-3.1.0.min.js
-public/js/libs/moment.js
-public/js/src/main.js
-public/js/src/notify.js
 node_modules
+login.css
+login.css.map
+login.scss
+main.css
+main.css.map
+main.scss
+bundle.js.LICENSE.txt
+fontawesome.js
+jquery-3.1.0.min.js
+moment.js
+main.js
+notify.js
